# posts-service

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: alembic.ini  database.py  dependencies.py  main.py  settings.py
app/migrations/: env.py
app/migrations/versions/: 31288bfc58d0_init.py  3ab3b13e4c67_respore_posts.py  88313149307d_init.py  946d48ae79a8_init2.py  9b7fd730a484_init.py  a67472d6c025_added_index.py  ef3164eb5a8b_init.py
app/models/: base_model.py  post_model.py
app/repositories/: post_repository.py
app/routes/: post_routes.py
app/schemas/: post_models.py
app/services/: post_service.py
app/utils/: custom_errors.py  errors_handlers.py
tests/: settings.py
tests/integration/: conftest.py  test_posts_integration.py
